--- a/registration_style.css
+++ b/registration_style.css
@@ -5,6 +5,7 @@ body{
     margin: 0px;
     padding: 0px;
     background-image: url('BG.jpg');
+    background-repeat: no-repeat;
     background-size: 1700px 1000px;
     height: auto;
 }
